--- a/Biblioteca/src/visao/eventos/visaoEvento.form
+++ b/Biblioteca/src/visao/eventos/visaoEvento.form
@@ -6,7 +6,7 @@
     <Property name="title" type="java.lang.String" value="Janela de Eventos"/>
   </Properties>
   <SyntheticProperties>
-    <SyntheticProperty name="formSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,2,66,0,0,2,-70"/>
+    <SyntheticProperty name="formSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,2,66,0,0,2,-14"/>
     <SyntheticProperty name="formSizePolicy" type="int" value="0"/>
     <SyntheticProperty name="generateSize" type="boolean" value="true"/>
     <SyntheticProperty name="generateCenter" type="boolean" value="true"/>
@@ -29,7 +29,7 @@
           <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jScrollPane1" pref="662" max="32767" attributes="0"/>
+                  <Component id="jScrollPane1" max="32767" attributes="0"/>
                   <Component id="jPanel1" alignment="1" max="32767" attributes="0"/>
                   <Group type="102" alignment="1" attributes="0">
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
@@ -87,6 +87,9 @@
               </Table>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jTEventosMouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
@@ -108,12 +111,12 @@
                       <Group type="102" alignment="1" attributes="0">
                           <Component id="jLabelNomeEven" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="jTxtNomeEven" min="-2" pref="72" max="-2" attributes="0"/>
+                          <Component id="jTxtNomeEven" min="-2" pref="90" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="1" attributes="0">
                           <Component id="jLabelNomeResp" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" max="-2" attributes="0"/>
-                          <Component id="jTxtNomeResp" min="-2" pref="72" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="jTxtNomeResp" min="-2" pref="90" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -123,23 +126,20 @@
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jTxtDataCmc" min="-2" pref="80" max="-2" attributes="0"/>
-                      <Component id="jTxtDataFim" min="-2" pref="80" max="-2" attributes="0"/>
+                      <Component id="jTxtDataCmc" min="-2" pref="90" max="-2" attributes="0"/>
+                      <Component id="jTxtDataFim" min="-2" pref="90" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" alignment="1" attributes="0">
-                          <Component id="jLabelCap" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Component id="jTxtCap" min="-2" pref="79" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="1" attributes="0">
-                          <Component id="jLabelEsp" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Component id="jTxtEsp" min="-2" pref="79" max="-2" attributes="0"/>
-                      </Group>
+                  <EmptySpace type="separate" pref="46" max="32767" attributes="0"/>
+                  <Group type="103" groupAlignment="1" attributes="0">
+                      <Component id="jLabelEsp" min="-2" max="-2" attributes="0"/>
+                      <Component id="jLabelCap" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                      <Component id="jTxtCap" pref="90" max="32767" attributes="0"/>
+                      <Component id="jBoxEspaco" pref="90" max="32767" attributes="0"/>
+                  </Group>
+                  <EmptySpace min="-2" pref="93" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -158,11 +158,11 @@
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jTxtNomeResp" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jTxtEsp" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabelDataFim" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabelEsp" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabelNomeResp" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jTxtDataFim" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jBoxEspaco" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
@@ -204,11 +204,6 @@
         </Component>
         <Component class="javax.swing.JTextField" name="jTxtNomeResp">
         </Component>
-        <Component class="javax.swing.JTextField" name="jTxtEsp">
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTxtEspActionPerformed"/>
-          </Events>
-        </Component>
         <Component class="javax.swing.JTextField" name="jTxtCap">
         </Component>
         <Component class="javax.swing.JFormattedTextField" name="jTxtDataCmc">
@@ -224,6 +219,17 @@
               <Format format="##/##/####" subtype="-1" type="5"/>
             </Property>
           </Properties>
+        </Component>
+        <Component class="javax.swing.JComboBox" name="jBoxEspaco">
+          <Properties>
+            <Property name="maximumRowCount" type="int" value="20"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jBoxEspacoActionPerformed"/>
+          </Events>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+          </AuxValues>
         </Component>
       </SubComponents>
     </Container>
